# near-agents

./: pyproject.toml
nethermind_api/: Dockerfile  app.py  requirements.txt
target_price_near_trial/: agent.py  app.py  call.py  metadata.json  requirements.txt  target_price.json
